velero-cel/block-velero-restore/.kyverno-test/resource.yaml
#######################################################
## Rule: block-velero-restore-to-protected-namespace ##
#######################################################
###### Restore - Bad
---
apiVersion: velero.io/v1
kind: Restore
metadata:
  name: badrestore01
  namespace: velero
spec:
  backupName: my-backup
  includedResources:
  - '*'
  namespaceMapping:
    default: kube-system
restorePVs: true
---
###### Restore - Good
apiVersion: velero.io/v1
kind: Restore
metadata:
  name: restore-without-namespace-mapping
  namespace: velero
spec:
  backupName: my-backup
  excludedResources:
  - nodes
  - events
  - events.events.k8s.io
  - backups.velero.io
  - restores.velero.io
  - resticrepositories.velero.io
  - csinodes.storage.k8s.io
  - volumeattachments.storage.k8s.io
  - backuprepositories.velero.io
  includedNamespaces:
  - '*'
---
apiVersion: velero.io/v1
kind: Restore
metadata:
  name: goodrestore01
  namespace: velero
spec:
  backupName: my-backup
  includedResources:
  - '*'
  namespaceMapping:
    default: ingress-nginx
restorePVs: true
---
